--- a/style.css
+++ b/style.css
@@ -1,50 +1,42 @@
-#wa-link {
-    position: absolute;
-    display: inline-block;
-    margin-left: 5px;
-    height: 20px;
-    padding: 0 7px;
-}
-
-#wa-link:hover {
-    background-color: lightgray;
-    border-radius: 3px;
-}
-
 #popup-body {
     font-family: robotolight, Arial, Helvetica, sans-serif;
+    background-color: #fff;
     width: 250px;
-    height: 150px;
+    height: 160px;
 }
 
-input {
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+#web-author-img {
+    margin-left: 2px;
+    float: left;
+    height: 60px;
+    width: 60px;
+}
+
+#ext-info {
+    font-size: 13px;
+    color: #515151;
+    text-align: center;
+}
+
+.ext-button {
     font-size: 12px;
-    background-color: white;
-    padding: 6px 8px;
-    width: 100%;
-}
-
-button {
     background-color: white;
     color: black;
     border: 1px solid lightgray;
     border-radius: 4px;
     margin-top: 10px;
-    font-size: 12px;
+    margin-bottom: 10px;
     padding: 10px;
 }
 
-button:hover {
+.ext-button:hover {
     background-color: lightgray;
 }
 
 .primary-button {
+    color: #fff;
     background-color: #337ab7;
     border-color: #2e6da4;
-    color: #fff;
 }
 
 .primary-button:hover {
@@ -57,9 +49,37 @@ button:hover {
 }
 
 .dialog-tittle {
-    font-family: robotolight, Arial, Helvetica, sans-serif;
-    font-size: 14px;
-    font-weight: bold;
+    font-size: 1.8em;
+    font-weight: normal;
     text-align: center;
+    margin-top: 5px;
     margin-bottom: 20px;
+}
+
+.ext-container {
+    display: inline-block;
+}
+
+#wa-link {
+    position: absolute;
+    display: inline-block;
+    padding: 3px 7px 0 7px;
+    margin-left: 5px;
+}
+
+#wa-link:hover {
+    background-color: lightgray;
+    border-radius: 3px;
+}
+
+
+#host {
+    color: #515151;
+    background-color: white;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 13px;
+    padding: 6px 8px;
+    width: 100%;
 }
