--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,7 @@
     padding: 10px;
 }
 
-.ext-button:hover {
+.extension-button:hover {
     background-color: lightgray;
 }
 
@@ -53,7 +53,7 @@
     font-weight: normal;
     text-align: center;
     margin-top: 5px;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
 }
 
 #extension {
@@ -61,8 +61,16 @@
     color: #313131;
 }
 
-.ext-container {
+.extension-container {
     display: inline-block;
+}
+
+#styled-line {
+    border: 0;
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    margin-bottom: 15px;
 }
 
 #wa-link {
@@ -76,7 +84,6 @@
     background-color: lightgray;
     border-radius: 3px;
 }
-
 
 #host {
     color: #515151;
