--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,7 @@
     text-align: center;
 }
 
-.ext-button {
+.extension-button {
     font-size: 12px;
     background-color: white;
     color: black;
